--- a/index.html
+++ b/index.html
@@ -24,18 +24,20 @@
     <header class="page-header">
       <nav class="page-navigation">
         <a href="./index.html" class="page-logo"
-          ><span class="accent-color">Web</span>Studio</a
+          >Web<span class="header-accent-color">Studio</span></a
         >
         <ul class="menu">
           <li class="menu-item">
-            <a class="menu-link" href="#portfolio">Portfolio</a>
+            <a class="menu-link" href="./index.html">Studio</a>
           </li>
-          <li class="menu-item"><a class="menu-link" href="#">Studio</a></li>
-          <li class="menu-item"><a class="menu-link" href="#">Contacts</a></li>
+          <li class="menu-item">
+            <a class="menu-link" href="">Portfolio</a>
+          </li>
+          <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
+      <address class="contact-address">
         <ul class="contact-list">
           <li class="contact-list-item">
             <a class="contact-list-link" href="mailto:info@devstudio.com"
@@ -60,7 +62,7 @@
 
       <!-- FEATURES SECTION -->
       <section class="features-section" id="features">
-        <h2 class="visually-hidden">Our features</h2>
+        <h2 hidden>Our features</h2>
         <ul class="features-list">
           <li class="features-list-item">
             <h3 class="features-list-title">Strategy</h3>
@@ -156,10 +158,9 @@
               width="360"
               height="300"
             />
-            <div class="portfolio-list-content">
-              <h3 class="portfolio-list-title">Banking App</h3>
-              <p class="portfolio-list-text">App</p>
-            </div>
+
+            <h3 class="portfolio-list-title">Banking App</h3>
+            <p class="portfolio-list-text">App</p>
           </li>
           <li class="portfolio-list-item">
             <img
@@ -169,10 +170,9 @@
               width="360"
               height="300"
             />
-            <div class="portfolio-list-content">
-              <h3 class="portfolio-list-title">Cashless Payment</h3>
-              <p class="portfolio-list-text">Marketing</p>
-            </div>
+
+            <h3 class="portfolio-list-title">Cashless Payment</h3>
+            <p class="portfolio-list-text">Marketing</p>
           </li>
           <li class="portfolio-list-item">
             <img
@@ -182,10 +182,9 @@
               width="360"
               height="300"
             />
-            <div class="portfolio-list-content">
-              <h3 class="portfolio-list-title">Meditation App</h3>
-              <p class="portfolio-list-text">App</p>
-            </div>
+
+            <h3 class="portfolio-list-title">Meditation App</h3>
+            <p class="portfolio-list-text">App</p>
           </li>
           <li class="portfolio-list-item">
             <img
@@ -195,10 +194,9 @@
               width="360"
               height="300"
             />
-            <div class="portfolio-list-content">
-              <h3 class="portfolio-list-title">Taxi Service</h3>
-              <p class="portfolio-list-text">Marketing</p>
-            </div>
+
+            <h3 class="portfolio-list-title">Taxi Service</h3>
+            <p class="portfolio-list-text">Marketing</p>
           </li>
           <li class="portfolio-list-item">
             <img
@@ -208,10 +206,9 @@
               width="360"
               height="300"
             />
-            <div class="portfolio-list-content">
-              <h3 class="portfolio-list-title">Screen Illustrations</h3>
-              <p class="portfolio-list-text">Design</p>
-            </div>
+
+            <h3 class="portfolio-list-title">Screen Illustrations</h3>
+            <p class="portfolio-list-text">Design</p>
           </li>
           <li class="portfolio-list-item">
             <img
@@ -221,10 +218,9 @@
               width="360"
               height="300"
             />
-            <div class="portfolio-list-content">
-              <h3 class="portfolio-list-title">Online Courses</h3>
-              <p class="portfolio-list-text">Marketing</p>
-            </div>
+
+            <h3 class="portfolio-list-title">Online Courses</h3>
+            <p class="portfolio-list-text">Marketing</p>
           </li>
         </ul>
       </section>
@@ -232,8 +228,7 @@
     <!-- FOOTER -->
     <footer class="page-footer">
       <a class="page-logo" href="./index.html"
-        ><span class="accent-color">Web</span>Studio</a
-      >
+        >Web<span class="footer-accent-color">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
