--- a/index.html
+++ b/index.html
@@ -22,217 +22,246 @@
   <body>
     <!-- HEADER -->
     <header class="page-header">
-      <nav class="page-navigation">
-        <a href="./index.html" class="page-logo"
-          >Web<span class="header-accent-color">Studio</span></a
-        >
-        <ul class="menu">
-          <li class="menu-item">
-            <a class="menu-link" href="./index.html">Studio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="">Portfolio</a>
-          </li>
-          <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
+      <div class="container header-container">
+        <nav class="page-navigation">
+          <a href="./index.html" class="page-logo logo-header"
+            >Web<span class="header-accent-color">Studio</span></a
+          >
+          <ul class="menu">
+            <li class="menu-item">
+              <a class="menu-link" href="./index.html">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Portfolio</a>
+            </li>
+            <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
 
-      <address class="contact-address">
-        <ul class="contact-list">
-          <li class="contact-list-item">
-            <a class="contact-list-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contact-list-item">
-            <a class="contact-list-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="contact-address">
+          <ul class="contact-list">
+            <li class="contact-list-item">
+              <a class="contact-list-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contact-list-item">
+              <a class="contact-list-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!-- HERO SECTION -->
-      <section class="hero-section">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button class="order-btn" type="button">Order Service</button>
+      <section class="section hero-section">
+        <div class="container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button class="order-btn" type="button">Order Service</button>
+        </div>
       </section>
 
       <!-- FEATURES SECTION -->
-      <section class="features-section" id="features">
-        <h2 hidden>Our features</h2>
-        <ul class="features-list">
-          <li class="features-list-item">
-            <h3 class="features-list-title">Strategy</h3>
-            <p class="features-list-content">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="features-list-item">
-            <h3 class="features-list-title">Punctuality</h3>
-            <p class="features-list-content">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="features-list-item">
-            <h3 class="features-list-title">Diligence</h3>
-            <p class="features-list-content">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="features-list-item">
-            <h3 class="features-list-title">Technologies</h3>
-            <p class="features-list-content">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section features-section" id="features">
+        <div class="container">
+          <h2 class="visually-hidden">Our features</h2>
+          <ul class="features-list">
+            <li class="features-list-item">
+              <h3 class="features-list-title">Strategy</h3>
+              <p class="features-list-content">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-list-item">
+              <h3 class="features-list-title">Punctuality</h3>
+              <p class="features-list-content">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-list-item">
+              <h3 class="features-list-title">Diligence</h3>
+              <p class="features-list-content">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-list-item">
+              <h3 class="features-list-title">Technologies</h3>
+              <p class="features-list-content">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- TEAM SECTION -->
-      <section class="team-section" id="team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-list-item">
-            <img
-              class="team-list-img"
-              src="./images/team/mark.jpg"
-              alt="Mark Guerrero avatar"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list-title">Mark Guerrero</h3>
-            <p class="team-list-text">Product Designer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-list-img"
-              src="./images/team/tom.jpg"
-              alt="Tom Ford avatar"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list-title">Tom Ford</h3>
-            <p class="team-list-text">Frontend Developer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-list-img"
-              src="./images/team/camila.jpg"
-              alt="Camila Garcia avatar"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list-title">Camila Garcia</h3>
-            <p class="team-list-text">Marketing</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-list-img"
-              src="./images/team/daniel.jpg"
-              alt="Daniel Wilson avatar"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list-title">Daniel Wilson</h3>
-            <p class="team-list-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section team-section" id="team">
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-list-item">
+              <img
+                class="team-list-img"
+                src="./images/team/mark.jpg"
+                alt="Mark Guerrero avatar"
+                width="264"
+                height="260"
+              />
+              <div class="team-list-content">
+                <h3 class="team-list-title">Mark Guerrero</h3>
+                <p class="team-list-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-list-img"
+                src="./images/team/tom.jpg"
+                alt="Tom Ford avatar"
+                width="264"
+                height="260"
+              />
+              <div class="team-list-content">
+                <h3 class="team-list-title">Tom Ford</h3>
+                <p class="team-list-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-list-img"
+                src="./images/team/camila.jpg"
+                alt="Camila Garcia avatar"
+                width="264"
+                height="260"
+              />
+              <div class="team-list-content">
+                <h3 class="team-list-title">Camila Garcia</h3>
+                <p class="team-list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-list-img"
+                src="./images/team/daniel.jpg"
+                alt="Daniel Wilson avatar"
+                width="264"
+                height="260"
+              />
+              <div class="team-list-content">
+                <h3 class="team-list-title">Daniel Wilson</h3>
+                <p class="team-list-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- PORTFOLIO SECTION -->
-      <section class="portfolio-section" id="portfolio">
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-list-img"
-              src="./images/portfolio/banking-app.jpg"
-              alt="Banking app"
-              width="360"
-              height="300"
-            />
-
-            <h3 class="portfolio-list-title">Banking App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-list-img"
-              src="./images/portfolio/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-
-            <h3 class="portfolio-list-title">Cashless Payment</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-list-img"
-              src="./images/portfolio/meditation-app.jpg"
-              alt="Banking app"
-              width="360"
-              height="300"
-            />
-
-            <h3 class="portfolio-list-title">Meditation App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-list-img"
-              src="./images/portfolio/taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-
-            <h3 class="portfolio-list-title">Taxi Service</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-list-img"
-              src="./images/portfolio/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-
-            <h3 class="portfolio-list-title">Screen Illustrations</h3>
-            <p class="portfolio-list-text">Design</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-list-img"
-              src="./images/portfolio/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-
-            <h3 class="portfolio-list-title">Online Courses</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="section portfolio-section" id="portfolio">
+        <div class="container">
+          <h2 class="section-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-list-img"
+                src="./images/portfolio/banking-app.jpg"
+                alt="Banking app"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-list-content">
+                <h3 class="portfolio-list-title">Banking App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-list-img"
+                src="./images/portfolio/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-list-content">
+                <h3 class="portfolio-list-title">Cashless Payment</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-list-img"
+                src="./images/portfolio/meditation-app.jpg"
+                alt="Banking app"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-list-content">
+                <h3 class="portfolio-list-title">Meditation App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-list-img"
+                src="./images/portfolio/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-list-content">
+                <h3 class="portfolio-list-title">Taxi Service</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-list-img"
+                src="./images/portfolio/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-list-content">
+                <h3 class="portfolio-list-title">Screen Illustrations</h3>
+                <p class="portfolio-list-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-list-img"
+                src="./images/portfolio/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-list-content">
+                <h3 class="portfolio-list-title">Online Courses</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- FOOTER -->
     <footer class="page-footer">
-      <a class="page-logo" href="./index.html"
-        >Web<span class="footer-accent-color">Studio</span></a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="page-footer-left">
+          <a class="page-logo logo-footer" href="./index.html"
+            >Web<span class="footer-accent-color">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
